; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-profiler.c_cvmx_update_perfcnt_irq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-profiler.c_cvmx_update_perfcnt_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COP0_CVMCTL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cvmx_update_perfcnt_irq() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* %1, align 4
  %3 = load i32, i32* @COP0_CVMCTL, align 4
  %4 = call i32 @CVMX_MF_COP0(i32 %2, i32 %3)
  %5 = load i32, i32* %1, align 4
  %6 = and i32 %5, -897
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = or i32 %7, 768
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* @COP0_CVMCTL, align 4
  %11 = call i32 @CVMX_MT_COP0(i32 %9, i32 %10)
  ret void
}

declare dso_local i32 @CVMX_MF_COP0(i32, i32) #1

declare dso_local i32 @CVMX_MT_COP0(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
